<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">TheWeatherApp</string>
    <string name="temperature" translatable="false">+17°C</string>
    <string name="spb">Saint-Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="paris">Paris</string>
    <string name="berlin">Berlin</string>
    <string name="london">London</string>
    <string name="wing_speed_title">Wind speed</string>
    <string name="pressure_title">Pressure</string>
    <string name="wind_speed">6 mps</string>
    <string name="pressure" translatable="false">755 mm</string>
    <string name="city_placeholder">City...</string>
    <string name="display_settings">Display settings</string>
    <string name="application_settings">Application settings</string>
    <string name="theme_setting_title">Theme:</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="units_settings_title">Units:</string>
    <string name="metric_units_title">Metric(°C)</string>
    <string name="imperial_units_title">Imperial(°F)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="about_city">ABOUT CITY</string>
    <string name="wiki_search_url" translatable="false">https://en.wikipedia.org/wiki/Special:Search?search=</string>
</resources>
